Sat  Mar 03 2001	H. Wade Minter (minter@lunenburg.org)
     * Added a test for the MP3 player.  Pops up an error box if
       the player isn't found.

Thu  Mar 01 2001	H. Wade Minter (minter@lunenburg.org)
     * Got most of the save/load functions working.
     * Using DialogBox for a couple of static dialogs.

Tue  Feb 27 2001	H. Wade Minter (minter@lunenburg.org)
     * Fixed a couple of fairly serious bugs that would prevent
       MP3s from playing.
     * Released version 0.8.1 (Bugfix)

Sun Feb 25 2001		H. Wade Minter (minter@lunenburg.org)
     * Added a category-modification PHP script.
     * Added delete/modify to the mrvoice PHP script.
     * Marked this as Release 0.8 (first public release)

Fri Feb 16 2001		H. Wade Minter (minter@lunenburg.org)
     * Cleaned up code in preparation for releasing mrvoice to the 
       general public (shudder).

Tue Jan 30 2001		H. Wade Minter (minter@lunenburg.org)
     * Released version 0.7.
     * Fixed resize bug - resizing will now change the size of the listbox
       and not much else.
     * Added static hotkeys for often-used MIDIs.

Mon Jan 29 2001		H. Wade Minter (minter@lunenburg.org)
     * Released version 0.6.
     * Started changelog (finally)
     * Fixed bug that caused searches to crash when a file in the database
       did not exist on the disk.
     * Added Escape as a hotkey to stop the currently-playing MP3
     * Added ability to clear selected hotkeys, instead of having to clear
       all hotkeys.
     * Added F11 and F12 as usable hotkeys.  NOTE: F11 and F12 cause
       problems under WindowMaker by default.
     * Added more status notes for status line.
     * Disabled the ability to resize the main box, until I figure out how
       to get things to resize nicely.

--
CVS ID: $Id: ChangeLog,v 1.6 2001/03/04 00:29:35 minter Exp $